# ScoreVision

./: README.md  image_processor.py  main.py  model.py  pyproject.toml  replit.nix  utils.py
.streamlit/: config.toml
assets/: style.css
