[project]
name = "repl-nix-scorevision"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "scipy>=1.14.1",
    "streamlit>=1.40.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "ultralytics>=8.3.23",
]
